--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "rootDir": "src",
     "outDir": "lib",
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "typeRoots": [
+      "../node_modules/@types"
+    ]
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
